# Extract-Workbench-Tool-Public

./: .dockerignore  .env.sample  .gitignore  DEPLOYMENT.md  DEVELOPEMENT.md  LICENSE  README.md  docker-compose-prod.yml  docker-compose.yml  nginx.conf  pyproject.toml
backend/: .env.sample  Dockerfile  README.md  requirements.txt  test_cost_calculation.py  test_cost_simple.py
backend/alembic/: README.md  env.py
backend/alembic/versions/: 001_rename_tables_to_new_names.py  002_add_segment_number_to_audio_tables.py  004_rename_image_feedback_column.py  005_add_image_file_uuid_to_image_content.py  006_fix_image_content_foreign_key.py  007_fix_image_annotations_foreign_key.py
backend/src/: __init__.py  constants.py  cost_calculator.py  db.py  file_coordinator.py  main.py  tasks.py  worker.py
backend/src/auth/: __init__.py  routes.py  security.py
backend/src/extractor/: logger_decorator.py
backend/src/factory/: __init__.py  audio.py  image.py  pdf.py
backend/src/models/: __init__.py  database.py  enums.py  schemas.py
backend/src/routes/: __init__.py  audio.py  image.py  pdf.py  utils.py
backend/tests/: README.md  __init__.py  base_test.py  conftest.py  test_existing_extractors.py  test_llamaparse_extractor.py  test_markitdown_extractor.py  test_runner.py  test_unstructured_extractor.py
frontend/: Dockerfile  QUICK_REFERENCE.md  README.md  components.json  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend/app/admin/: page.tsx
frontend/app/audio/: page.tsx  (+1 more)
(+126 files in other folders)
