
[project]
name = "pdf-extraction-tool"
version = "0.1.0"
description = "A tool for extracting text from PDFs using multiple AI extraction engines"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3==15.2.0",
    "aiosqlite==0.21.0",
    "amqp==5.3.1",
    "assemblyai>=0.28.0",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "asyncpg>=0.30.0",
    "azure-ai-documentintelligence>=1.0.2",
    "camelot-py==1.0.9",
    "celery==5.5.3",
    "fastapi>=0.118.2",
    "greenlet==3.2.4",
    "gunicorn==23.0.0",
    "loguru>=0.7.3",
    "markitdown>=0.0.1a0",
    "numpy==2.2.6",
    "openai>=1.30.0",
    "opencv-python>=4.12.0.88",
    "packaging==25.0",
    "passlib==1.7.4",
    "pdfminer-six==20250506",
    "pdfplumber==0.11.7",
    "pillow==11.3.0",
    "psycopg2",
    "psycopg2-binary>=2.9.11",
    "pydantic==2.11.9",
    "pyjwt==2.9.0",
    "pymupdf==1.26.4",
    "pypdf2==3.0.1",
    "pypdfium2==4.30.0",
    "pytesseract>=0.3.13",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "redis==5.2.1",
    "requests>=2.31.0",
    "sqlalchemy==2.0.43",
    "uvicorn==0.37.0",
    "alembic>=1.13.0",
]
